# titanium-sdk

./: .clang-format  .editorconfig  .eslintignore  .eslintrc  .gitignore  .jscsrc  .jshintrc  .oxlintrc.json  .project  .retireignore  .swiftlint.yml  .travis.yml  AGENTS.md  AppSpider.scfg  CHANGELOG.md  CREDITS  Gruntfile.js  Jakefile  Jenkinsfile  LICENSE  MIGRATION_GUIDE.md  README  README.md  SConstruct  STARTUP.md  TitaniumKit.podspec  adb-all.sh  build.sh  check-lockfile.js  dangerfile.cjs  dangerfile.js  doit.sh  eslint.config.mjs  greenkeeper.json  install.sh  lint-staged.config.js  optimization_plan.md  out  out.txt  package-lock.json  (+6 more)
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue_template.md
.github/ISSUE_TEMPLATE/: 1.bug_report.yml  2.docs_issue.yml  3.feature_proposal.yml  config.yml  propose-a-feature.md  report-a-bug.md
.github/workflows/: backport.yml  build.yml  cla.yaml  docs.yml  emulator-test.yml  regen-builds.yml  regen-docs.yml  release.yml  sponsors.yaml  test-suite.yml  tests-android.yml  tests-ios.yml
.husky/: pre-commit
.pi/task_tree/: roots.jsonl
android/: .clang-format  .classpath  .gitignore  .project  AndroidManifest.xml  SConscript  SConstruct  ScrollView_OPTIMIZATION_PLAN.md  TableView_OPTIMIZATION_PLAN.md  TiView_OPTIMIZATION_PLAN.md  build.gradle  build.xml  checkstyle.xml  debugger.md  default.properties  dependency.json  gradle.properties  gradlew.bat  notes.md  package-lock.json  package.json  settings.gradle  untar.gradle
android/app/: build.gradle
android/appgen/: .project  gen-android.py
android/dev/: android-formatting.xml  setup.sh
android/drawable/: .gen-index.rb.swp  gen-index.rb  index.html
android/kroll/: .classpath  .project
android/kroll-apt/: .classpath  .project  README.md  build.gradle  build.properties  build.xml  pde-build.xml  plugin.xml
android/runtime/v8/src/native/: Android.mk  AndroidUtil.cpp  AndroidUtil.h  Assets.cpp  Assets.h  CMakeLists.txt  CopyMap.cpp  CopyMap.h  EventEmitter.cpp  EventEmitter.h  EventListener.cpp  EventListener.h  FunctionTest.cpp  InspectorClient.cpp  InspectorClient.h  InspectorFrontend.cpp  InspectorFrontend.h  JNIUtil.cpp  JNIUtil.h  JSDebugger.cpp  JSDebugger.h  JSException.cpp  JSException.h  JavaObject.cpp  JavaObject.h  KrollBindings.cpp  KrollBindings.h  KrollJavaScript.cpp  KrollJavaScript.h  KrollNativeBindings.gperf  KrollProxy.cpp  KrollProxy.h  ModuleFactory.cpp  ModuleFactory.h  ModuleLoader.cpp  ModuleLoader.h  NativeMap.cpp  NativeMap.h  NativeObject.h  Proxy.cpp  (+25 more)
android/runtime/v8/src/native/modules/: APIModule.cpp  APIModule.h  AssetsModule.cpp  AssetsModule.h  EvaluateModule.cpp  EvaluateModule.h  ModuleContext.cpp  ModuleContext.h  ScriptsModule.cpp  ScriptsModule.h  TitaniumGlobal.cpp  TitaniumGlobal.h  TitaniumModule.cpp  TitaniumModule.h
android/runtime/v8/src/ndk-modules/libv8/: .gitignore  Android.mk  CMakeLists.txt
android/scripts/: README  androidsdk.py  bootstrap.py  tilogger.py
android/templates/: Activity.java  AndroidManifest.xml  App.java  AppInfo.java  AppUserData.java  JSIntervalService.java  default.properties  project
android/tichooser/: .classpath  .project  AndroidManifest.xml  default.properties
android/tidev/: .classpath  .gitignore  .project  .sconsign.dblite  AndroidManifest.xml  SConstruct  keystore  sign.sh  tidev.apk
android/tidroid/: .classpath  .project  AndroidManifest.xml
android/titanium/: .classpath  .factorypath  .gitignore  .project  .sconsign.dblite  AndroidManifest.xml  KrollGeneratedBindings.gperf.ejs  KrollJS.h.ejs  SConstruct  V8Snapshots.h.ejs  bootstrap.js.ejs  bootstrap.lazymodule.js.ejs  build.gradle  build.xml  default.properties  gen-tiall.py  genBootstrap.js  jsmin.py  libv8-services.js  libv8-services.mjs  libv8-update-library.js  prebuild.js  prebuild.mjs  project.properties
anvil/: README
anvil/driver/: .gitignore  README  common.js  config.js  driver.js  driverUtils.js  exampleConfig.js  localMode.js  remoteMode.js  util.js
anvil/hub/: anvil.sql  exampleConfig.js  hub.js  hubUtils.js  messageHandler.js  server.js  util.js
apidoc/: README.md  Titanium.yml  common.py  convert_to_new_yml_doc.py  docgen.js  docgen.py  package.json  tdoc2yml.py  template.tdoc  template.yml  test_jsca.js  validate.js  validate.py  yml2tdoc.py
apidoc/UI/: ui.tdoc
changelog/: config.js
common/: README.md
drillbit/: drillbit.js  drillbit.py  drillbit_cmd.py  drillbit_results.py  drillbit_sdk.py  manifest  manifest_harness  runtest  tiapp.xml  tiapp_harness.xml
driver/: README  common.js  config.js  driver.js  driverGlobal.js  driverUtils.js  example.cfg  exampleConfig.js  localMode.js  remoteMode.js  util.js
hub/: exampleConfig.js  hub.js  hubUtils.js  messageHandler.js  server.js  util.js
iphone/: .clang-format  .gitignore  AppledocSettings.plist  Info.plist  SConstruct  main.m  notes.md  package.json  progressbar.py  simulators.json
ivi/: package.json
maintainer-docs/: README.md  ci-setup.md  releasing-the-sdk.md
mobileweb/: .gitignore  package.json
module/: README.md
site_scons/: ant.py  apicoverage.json  apicoverage.py  apimerge.py  importresolver.py  package.py
support/: LICENSE  LICENSE.txt  manifest.json  manifest.py  package.json  project.py  tiapp.py  titanium.py
support/win32/gperf-3.0.1/doc/: Makefile.in  configure  configure.in  gperf.1  gperf.dvi  gperf.html  gperf.info  gperf.ps  gperf.texi  gperf_1.html  gperf_10.html  gperf_2.html  gperf_3.html  gperf_4.html  gperf_5.html  gperf_6.html  gperf_7.html  gperf_8.html  gperf_9.html  gperf_toc.html  help2man
tests/: .eslintrc  .gitignore  README.md  babel.config.json  package-lock.json  package.json  ti.analytics.addontest.js  ti.blob.addontest.js  ti.ui.listview.test.js  ti.ui.navigationwindow.test.js
ti_mocha_tests/: app.js  should.js  ti.analytics.test.js  ti.calendar.test.js  ti.filesystem.test.js  ti.ui.attributedString.test.js  ti.ui.imageview.test.js  ti.ui.label.test.js  ti.ui.slider.test.js  ti.ui.window.test.js  ti.utils.test.js
vitepress/: package-lock.json  package.json
(+10497 files in other folders)
